Added additional activity screens
Added MyProfile, MyTrophyRoom. Few minor updates in other files

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -12,12 +12,11 @@
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
-        android:name="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
             android:name=".MainScreen"
             android:label="@string/title_activity_main_screen" >
-            <intent-filter android:label="@string/app_name">
+            <intent-filter android:name="@string/app_name" >
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
@@ -47,5 +46,14 @@
             android:name=".Results"
             android:label="@string/title_activity_results" >
         </activity>
+        <activity
+            android:name=".MyProfile"
+            android:label="@string/title_activity_my_profile" >
+        </activity>
+        <activity
+            android:name=".MyTrophyRoom"
+            android:label="@string/title_activity_my_trophy_room" >
+        </activity>
     </application>
+
 </manifest>
